--- a/composer.json
+++ b/composer.json
@@ -21,8 +21,8 @@
 		"mikey179/vfsStream": ">=1.0.0"
 	},
 	"autoload": {
-		"psr-0": {
-			"Transformist": "lib/"
+		"files": {
+			"lib/bootstrap.php"
 		}
 	}
 }
