--- a/composer.json
+++ b/composer.json
@@ -12,13 +12,13 @@
 		"conversion"
 	],
 	"licence": "MIT",
-	"homepage": "http://github.com/v-technologies/transformist",
+	"homepage": "https://github.com/v-technologies/transformist",
 	"require": {
-		"php": ">=5.2.0"
+		"php": ">=7.3.0"
 	},
 	"require-dev": {
-		"php": ">=5.3.0",
-		"mikey179/vfsStream": ">=1.0.0"
+		"mikey179/vfsstream": "^1.6",
+                "phpunit/phpunit": "^8.4"
 	},
 	"autoload": {
 		"files": [
